# ur10-controller

./: README.md
src/tum_ics_ur10_controller_tutorial/: CMakeLists.txt
src/tum_ics_ur10_controller_tutorial/include/tum_ics_ur10_controller_tutorial/: CartesianTrajectory.h  DefaultControl.h
src/tum_ics_ur10_controller_tutorial/launch/: testSimpleEffortCtrl.launch
src/tum_ics_ur10_controller_tutorial/launch/configs/: configUR10.ini  simpleEffortCtrl.yaml
src/tum_ics_ur10_controller_tutorial/launch/configs/FromSRC/: configUR10_Arm.ini  simpleEffortCtrl.yaml
src/tum_ics_ur10_controller_tutorial/src/: CartesianTrajectory.cpp  DefaultControl.cpp
src/tum_ics_ur10_controller_tutorial/src/Applications/: testSimpleEffortCtrl.cpp
src/tum_ics_ur10_robot/tum_ics_ur10_bringup/launch/: bringUR10-lacquey.launch  bringUR10-simulator.launch  bringUR10.launch
src/tum_ics_ur10_robot/tum_ics_ur10_description/: .gitignore  CMakeLists.txt
src/tum_ics_ur10_robot/tum_ics_ur10_description/launch/: bringUR10-lacquey.launch  bringUR10.launch
src/tum_ics_ur10_robot/tum_ics_ur10_description/launch/rviz_conf/: robot_ur10.rviz  ursa_robot_ur10.rviz
src/tum_ics_ur10_robot/tum_ics_ur10_description/meshes/arm/: mountc.dae
src/tum_ics_ur10_robot/tum_ics_ur10_description/meshes/lacquey/: Lacquey_BumperRing_2.STL  Lacquey_Left_Finger.STL  Lacquey_Mid_Finger.STL  Lacquey_Palm.SLDPRT  Lacquey_Palm.STL  Lacquey_Palm.blend  Lacquey_Right_Finger.STL  Lacquey_proxph.SLDPRT  Lacquey_proxph.STL  Lacquey_proxph.blend  Lacquey_proxph.blend1  Lacquey_proxphBlender.STL  mount.blend  mount.blend1
src/tum_ics_ur10_robot/tum_ics_ur10_description/robots/: robot_ur10_zeros.yaml  upload_ur10.launch  ursa_ur10_zeros.yaml
src/tum_ics_ur10_robot/tum_ics_ur10_description/urdf/: common.xacro  ur10.gazebo.xacro  ur10.transmission.xacro  ur10.urdf.xacro  ur10_robot.urdf  ur10_robot.urdf.xacro  ur10_robot_lacquey.urdf.xacro
src/tum_ics_ur10_robot/tum_ics_ur10_description/urdf/lacquey/: grippers.urdf.xacro  lacquey.urdf.xacro
src/ur10_robot_model/: CMakeLists.txt
src/ur10_robot_model/include/ur10_robot_model/: model_base.h  model_ur10.h
src/ur10_robot_model/launch/: ur10_robot_model_test.launch
src/ur10_robot_model/launch/configs/: ur10_model.yaml
src/ur10_robot_model/src/: jacobians.cpp  jacobians_p.cpp  jacobians_t.cpp  jacobians_t_p.cpp  kinematics.cpp  matrix_c.cpp  matrix_g.cpp  matrix_m.cpp  matrix_th.cpp  matrix_yr.cpp  model_ur10.cpp
src/ur10_robot_model/src/applications/: ur10_robot_model_node.cpp
src/utilities/object_msgs/: CMakeLists.txt
src/utilities/object_msgs/msg/: Object.msg  Objects.msg
src/utilities/object_msgs/srv/: AddMovingObjects.srv
src/utilities/object_server/: CMakeLists.txt
src/utilities/object_server/launch/: object_server.launch
src/utilities/object_server/src/: object.cpp  object_server.cpp
src/utilities/ow_core/: CMakeLists.txt  package.xml
src/utilities/ow_core/include/ow_core/: algorithms.h  configuration.h  conversions.h  math.h  types.h
src/utilities/ow_core/include/ow_core/algorithms/: i_scalar_algorithm.h  i_scalar_differentiation.h  i_scalar_filter.h  matrix_algorithm.h  scalar_butterworth_filter.h  scalar_exponential_decay_filter.h  scalar_finite_difference.h  state_differentiator.h  state_integrator.h
src/utilities/ow_core/include/ow_core/common/: i_in_port.h  i_out_port.h  in_port.h  out_port.h  parameter.h  port.h  ros.h
src/utilities/ow_core/include/ow_core/eigen/: quaternion_ref.h
src/utilities/ow_core/include/ow_core/math/: cross_product.h  error_functions.h  maps.h  pseudo_inverse.h  quaternion.h  random_orientation.h  transform.h
src/utilities/ow_core/include/ow_core/plugins/: class_export.h  i_generic_class.h  i_plugin.h
src/utilities/ow_core/include/ow_core/test_utilities/: gtest.h
src/utilities/ow_core/include/ow_core/trajectory/: i_trajectory.h  piecewise_trajectory_base.h  polynomial.h  polynomial_trajectory.h  state_trajectories.h  state_trajectory.h  trajectories.h
src/utilities/ow_core/include/ow_core/type_bases/: angular_acceleration_base.h  angular_position_base.h  angular_velocity_base.h  cartesian_base.h  force_base.h  jacobian_base.h  linear_acceleration_base.h  linear_position_base.h  linear_state_base.h  linear_velocity_base.h  matrix_base.h  moment_base.h  quaternion_base.h  rotation3_base.h  rotation_base.h  state_base.h  vector3_base.h  vector_base.h
src/utilities/ow_core/include/ow_core/type_references/: angular_acceleration_ref.h  angular_position_ref.h  angular_velocity_ref.h  force_ref.h  jacobian_ref.h  joint_ref.h  joint_state_ref.h  linear_acceleration_ref.h  linear_position_ref.h  linear_velocity_ref.h  matrix_ref.h  moment_ref.h  quaternion_ref.h  rotation3_ref.h  vector3_ref.h  vector_ref.h
src/utilities/ow_core/include/ow_core/types/: angular_acceleration.h  angular_position.h  angular_state.h  angular_velocity.h  cartesian_acceleration.h  cartesian_position.h  cartesian_state.h  cartesian_vector.h  cartesian_velocity.h  force.h  force_torque_sensor.h  homogeneous_transformation.h  inertial_measurment_unit_sensor.h  jacobian.h  joint_acceleration.h  joint_effort.h  joint_position.h  joint_state.h  joint_velocity.h  linear_acceleration.h  linear_position.h  linear_state.h  linear_velocity.h  matrix.h  moment.h  rotation3.h  spatial_vector.h  vector3.h  vector_dof.h  wrench.h
src/utilities/ow_core/include/ow_core/utilities/: eigen_typedef_macros.h  forward_declarations.h  smart_ptr.h  support_templates.h  thread.h  type_guard.h  type_not_assignable.h
src/utilities/ow_core/src/: conversions.cpp
src/utilities/ow_core/src/math/: reference_frames.cpp
src/utilities/ow_msgs/: CMakeLists.txt  README.md  package.xml
src/utilities/ow_msgs/msg/: AngularState.msg  AngularStateStamped.msg  CartesianStateStamped.msg  JointState.msg  JointStateStamped.msg  LinearState.msg  LinearStateStamped.msg  VectorStamped.msg
src/utilities/rviz_camera_stream/config/: rviz_camera_stream.rviz
src/utilities/rviz_camera_stream/src/: camera_display.cpp
src/utilities/visual_perception/: CMakeLists.txt
(+13 files in other folders)
